[gd_scene load_steps=2 format=3 uid="uid://b8ivsnnw3c4bm"]

[ext_resource type="Script" uid="uid://c3irqcoshr61a" path="res://scripts/network_node.gd" id="1_vxgek"]

[node name="RoadNode" type="Node2D"]
script = ExtResource("1_vxgek")

[node name="UnderLayer" type="Polygon2D" parent="."]
color = Color(0.2, 0.2, 0.2, 1)

[node name="MainLayer" type="Polygon2D" parent="."]
z_index = 2
z_as_relative = false
color = Color(0.2, 0.2, 0.2, 1)

[node name="MarkingsLayer" type="Node2D" parent="."]
z_index = 3
z_as_relative = false

[node name="DebugLayer" type="Node2D" parent="."]
z_index = 99
z_as_relative = false

[node name="BoundaryLayer" type="Polygon2D" parent="."]
color = Color(1, 1, 1, 0)

[node name="PathingLayer" type="Node2D" parent="."]
z_index = 3
